--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,14 @@
             <scope>test</scope>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/com.zenjava/javafx-maven-plugin -->
+        <dependency>
+            <groupId>com.zenjava</groupId>
+            <artifactId>javafx-maven-plugin</artifactId>
+            <version>8.7.0</version>
+        </dependency>
+
+
     </dependencies>
 
     <build>
@@ -41,6 +49,14 @@
                 <configuration>
                     <source>1.8</source>
                     <target>1.8</target>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>com.zenjava</groupId>
+                <artifactId>javafx-maven-plugin</artifactId>
+                <version>2.0</version>
+                <configuration>
+                    <mainClass>com.devcolibri.mavenjavafxapp.MainApp</mainClass>
                 </configuration>
             </plugin>
         </plugins>
