--- a/pom.xml
+++ b/pom.xml
@@ -32,11 +32,11 @@
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/com.zenjava/javafx-maven-plugin -->
-        <dependency>
-            <groupId>com.zenjava</groupId>
-            <artifactId>javafx-maven-plugin</artifactId>
-            <version>8.7.0</version>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>com.zenjava</groupId>-->
+            <!--<artifactId>javafx-maven-plugin</artifactId>-->
+            <!--<version>8.7.0</version>-->
+        <!--</dependency>-->
 
 
     </dependencies>
@@ -56,7 +56,7 @@
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>2.0</version>
                 <configuration>
-                    <mainClass>com.devcolibri.mavenjavafxapp.MainApp</mainClass>
+                    <mainClass>dbk.trainer.multi.Multi</mainClass>
                 </configuration>
             </plugin>
         </plugins>
